--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiogram==2.14.3
-aiohttp==3.7.4.post0
+aiohttp
 async-timeout==3.0.1
 attrs==21.2.0
 Babel==2.9.1
@@ -13,6 +13,6 @@ PyMySQL==1.0.2
 python-dotenv==0.19.0
 pytz==2021.1
 typing-extensions==3.10.0.2
-yarl==1.6.3
+yarl
 Pillow==8.1.0
 pilmoji==2.0.1
